2006-01-31  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JComboBox/setEditor.java
	(test): Restore MetalLookAndFeel at the end of the test.

2006-01-31  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalRadioButtonUI/getDisabledTextColor.java
	(test): Set known theme in MetalLookAndFeel,
	* gnu/testlet/javax/swing/plaf/metal/MetalRadioButtonUI/getFocusColor.java: 
	(test): Likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalRadioButtonUI/getSelectColor.java:
	(test): Likewise.

2006-01-31  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/TestSecurityManager2.java: Added prepareChecks
	methods with no mayCheck parameter to avoid having to create
	and pass empty arrays all the time.

	* gnu/testlet/java/io/File/security.java: Use the above.
	* gnu/testlet/java/io/FileInputStream/security.java: Likewise.
	* gnu/testlet/java/io/FileOutputStream/security.java: Likewise.
	* gnu/testlet/java/io/ObjectInputStream/security.java: Likewise.
	* gnu/testlet/java/io/ObjectOutputStream/security.java: Likewise.
	* gnu/testlet/java/lang/Class/security.java: Likewise.
	* gnu/testlet/java/lang/ClassLoader/security.java: Likewise.
	* gnu/testlet/java/lang/Runtime/security.java: Likewise.
	* gnu/testlet/java/lang/SecurityManager/thread.java: Likewise.
	* gnu/testlet/java/lang/System/security.java: Likewise.

2006-01-31  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/AbstractButton.java
	(test): Set the look and feel theme to DefaultMetalTheme.

2006-01-31  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JDesktopPane/constructor.java
	New test.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/java/awt/Container/getPreferredSize.java:
	New test.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JRootPane/RootLayout/preferredLayoutSize.java:
	Fixed copyright header and docs.

2006-01-30  Roman Kennke  <kennke@aicas.com>
